[fixed] black overlay is visible even on non hover state

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -33,6 +33,8 @@
             inset: 0;
             width: 100%;
             height: 100%;
+            z-index: 2;
+            background: transparent;
 
             &::after {
                 content: '';
